# planetary-image-stacker

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: aligned_image.hpp  cropped_image.hpp  image.hpp  image_aligner.hpp  image_stacker.hpp  planet_detector.hpp  video_processor.hpp
src/: aligned_image.cpp  cropped_image.cpp  image.cpp  image_aligner.cpp  image_stacker.cpp  main.cpp  planet_detector.cpp  test.cpp  video_processor.cpp
